2006-10-19  Dave Lehman  <dlehman@redhat.com>
	* src/system-config-kdump.py:
	rearrange UI to allow only one location
	declare global variables for the type, action string constants
	check for a usable bootloader early on
	* system-config-kdump.spec:
	remove BuildRoot before %install
	add gettext BuildRequires
	remove ExclusiveOS tag
	remove explicit python2 Requires

2006-10-18  Dave Lehman  <dlehman@redhat.com>
	* src/system-config-kdump.py:
	add support for "core_collector" and "path" handlers
	give choices of "ssh" and "nfs" instead of "net"
	add validation of edit location dialog results
	add choice of "none" to default actions
	remove "ifc" support since it's gone from kexec-tools
	update kdump config file header
	fix a couple of strings that weren't getting translated

2006-10-16  Dave Lehman  <dlehman@redhat.com>

	* src/system-config-kdump.py:
	fix parsing of crash settings from /proc/cmdline

2006-10-10  Dave Lehman  <dlehman@redhat.com>

	* src/system-config-kdump.py,src/system-config-kdump.glade:
	fix various bugs in writeDumpConfig and writeBootloaderConfig
	reflect pre-existing "ifc" and "default" lines in GUI on startup
	don't ever freeze the net interface checkbutton
	minor GUI tweaks
	