@@ -13,6 +13,7 @@
   <property name="default_height">450</property>
   <property name="resizable">True</property>
   <property name="destroy_with_parent">False</property>
+  <property name="icon">system-config-kdump.png</property>
   <property name="icon_name">stock_weather-storm</property>
   <property name="decorated">True</property>
   <property name="skip_taskbar_hint">False</property>
